logs/dag_id=init_ods_layer/run_id=manual__2024-07-12T13:55:45.629374+00:00/task_id=dump_source/attempt=1.log
[2024-07-12T13:55:49.513+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-12T13:55:49.528+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: init_ods_layer.dump_source manual__2024-07-12T13:55:45.629374+00:00 [queued]>
[2024-07-12T13:55:49.535+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: init_ods_layer.dump_source manual__2024-07-12T13:55:45.629374+00:00 [queued]>
[2024-07-12T13:55:49.536+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-07-12T13:55:49.545+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): dump_source> on 2024-07-12 13:55:45.629374+00:00
[2024-07-12T13:55:49.550+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=6765) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-12T13:55:49.553+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'init_ods_layer', 'dump_source', 'manual__2024-07-12T13:55:45.629374+00:00', '--job-id', '54', '--raw', '--subdir', 'DAGS_FOLDER/init_ods.py', '--cfg-path', '/tmp/tmp8y18zm_t']
[2024-07-12T13:55:49.555+0000] {standard_task_runner.py:63} INFO - Started process 6774 to run task
[2024-07-12T13:55:49.555+0000] {standard_task_runner.py:91} INFO - Job 54: Subtask dump_source
[2024-07-12T13:55:49.587+0000] {task_command.py:426} INFO - Running <TaskInstance: init_ods_layer.dump_source manual__2024-07-12T13:55:45.629374+00:00 [running]> on host 8047aa21fe02
[2024-07-12T13:55:49.653+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'dump_source', field 'bash_command'. Template: '\n        echo "Exporting PGPASSWORD and starting pg_dump"\n        export PGPASSWORD="{{{{ ti.xcom_pull(key=\'source_db\')[\'password\'] }}}}"\n        echo "Running pg_dump with user: {{{{ ti.xcom_pull(key=\'source_db\')[\'user\'] }}}}, host: {{{{ ti.xcom_pull(key=\'source_db\')[\'host\'] }}}}, port: {{{{ ti.xcom_pull(key=\'source_db\')[\'port\'] }}}}, database: {{{{ ti.xcom_pull(key=\'source_db\')[\'database\'] }}}}"\n        pg_dump -U {{{{ ti.xcom_pull(key=\'source_db\')[\'user\'] }}}} -h {{{{ ti.xcom_pull(key=\'source_db\')[\'host\'] }}}} -p {{{{ ti.xcom_pull(key=\'source_db\')[\'port\'] }}}} -n source_data -f {{{{ params.dump_file }}}} {{{{ ti.xcom_pull(key=\'source_db\')[\'database\'] }}}}\n        echo "pg_dump completed with exit code $?"\n    '
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 3, in template
jinja2.exceptions.TemplateSyntaxError: expected token ':', got '}'
[2024-07-12T13:55:49.657+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1337, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 3, in template
jinja2.exceptions.TemplateSyntaxError: expected token ':', got '}'
[2024-07-12T13:55:49.665+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=init_ods_layer, task_id=dump_source, run_id=manual__2024-07-12T13:55:45.629374+00:00, execution_date=20240712T135545, start_date=20240712T135549, end_date=20240712T135549
[2024-07-12T13:55:49.670+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 54 for task dump_source (expected token ':', got '}'; 6774)
[2024-07-12T13:55:49.694+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-12T13:55:49.706+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-12T13:55:49.708+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
